2017-02-10  Deniz Yuret  <dyuret@ai-test.hpc.ku.edu.tr>

	* unit-test-todo:
	+ broadcast.jl
	cuda44.jl
	distributions.jl
	gpu.jl
	+ karray.jl
	kptr.jl
	+ linalg.jl
	+ reduction.jl
	x runtests.jl
	+ unary.jl
	update.jl

	* DONE:

	* TODO8:

	# implement better unit testing.
	## autograd.jl: add enough primitives to knetarray to pass the autograd tests converted to knetarrays.
	# add back cpu convolution
	# figure out rtfd doc setup or forwarding.
	# fix unclear docs for optimization, tutorial example?
	# doc warnings about missing broadcast, reduction, restricted cat, indexing, no bool array etc.
	# override KnetArray and Array instead of cpu2gpu etc.
	# KnetArray does not work on cpu-only (should it?)
	# KnetArray ==, ===, isapprox etc. missing.
	# copy! for KnetArray missing. (we have fill!, rand! etc. is copy! supported by AutoGrad?)
	# docs todo: perceptron. kernel perceptron. svm. lenet and vgg in cnn section.
	# charlm: add dropout, add adam, functional lstm interface defining multi-output grad2 function.
	# charlm: try indexing op instead of sparse matmul.
	# charlm: try lstm time concatenation.
	# optimization:
	## make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	## optimize reduction and broadcasting kernels.
	## optimize logp / softmax.
	## optimize conv4 / matmul - arrayfire? cudnn conv instead of matmul? cudnn conv algorithms?
	## try fusion: we can do layers in one kernel call: relu(wx+b).
	## try streams or multiple gpus.
	# mnist2d: implement/test sparse arrays
	# for general arrays: broadcast, get/setindex, h/v/cat.
	# 0.7: rename the 73 functions, cpu tests (add conv), v0.5 compat.
	# gputests.jl and cputests.jl are broken.
	# find out why benchmarks are slower on julia5/6.
	# resolve issues
	# check old todo list
	# deepcopy does not work for KnetArray

2017-02-09  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
