@@ -15,6 +15,8 @@
 
 	* DONE:
 
+	# doc warnings about missing broadcast, reduction, restricted cat, indexing, no bool array etc.
+
 	* TODO8:
 
 	# implement better unit testing.
@@ -22,11 +24,14 @@
 	# add back cpu convolution
 	# figure out rtfd doc setup or forwarding.
 	# fix unclear docs for optimization, tutorial example?
-	# doc warnings about missing broadcast, reduction, restricted cat, indexing, no bool array etc.
 	# override KnetArray and Array instead of cpu2gpu etc.
+	# grad of convert (AutoGrad issue)
 	# KnetArray does not work on cpu-only (should it?)
 	# KnetArray ==, ===, isapprox etc. missing.
 	# copy! for KnetArray missing. (we have fill!, rand! etc. is copy! supported by AutoGrad?)
+	# add benchmarks with new dynamic frameworks: Yoav tweet, Volkan email.
+
+	# docs todo: Julia tutorial. Baris Bozkurt's comments.
 	# docs todo: perceptron. kernel perceptron. svm. lenet and vgg in cnn section.
 	# charlm: add dropout, add adam, functional lstm interface defining multi-output grad2 function.
 	# charlm: try indexing op instead of sparse matmul.
